[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4.1"
serde = "1.0"